--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         title:"دکتر سعید مجتبی‌زاده",
         sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
         about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.`,
-        footer:"© سعید مجتبی‌زاده",
+        footer:"سعید مجتبی‌زاده ©",
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
@@ -258,12 +258,12 @@
         links:[
           {text:"Website",href:"http://mojtabazadeh.ir/"},
           {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
           {text:"Instagallery",href:"https://www.instagallery.ir/"},
           {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
           {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
           {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Website",href:"https://www.mojtabazade.ir/"}
+          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
         ]
       }
     };
