--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     .profile-container {
-      width:150px;
-      height:150px;
+      width:150px;height:150px;
       margin:25px auto 16px;
       border-radius:50%;
       box-shadow:0 0 25px rgba(255,120,255,0.6),0 0 45px rgba(140,70,255,0.3);
@@ -142,7 +141,7 @@
       display:flex;
       align-items:center;
       gap:6px;
-      font-size:0.95rem;
+      font-size:1rem;
       color:#f0e6ff;
       text-decoration:none;
       transition:all 0.3s ease;
@@ -214,13 +213,13 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
+    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
+    <!-- متن معرفی -->
   </div>
 
   <div class="contact-box" id="contact-box">
@@ -232,22 +231,17 @@
     سعید مجتبی‌زاده ©
   </div>
 
-  <script defer>
+  <script>
     const data={
       fa:{
         title:"دکتر سعید مجتبی‌زاده",
-        sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.`,
+        sub:"فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
         footer:"سعید مجتبی‌زاده ©",
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
+          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
         ]
       },
       en:{
@@ -258,12 +252,7 @@
         links:[
           {text:"Website",href:"http://mojtabazadeh.ir/"},
           {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
+          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
         ]
       }
     };
@@ -348,15 +337,15 @@
       });
       ctx.strokeStyle="rgba(200,150,255,0.2)";
       ctx.lineWidth=0.5;
-            for(let i=0; i<particles.length; i++){
-        for(let j=i+1; j<particles.length; j++){
-          const dx = particles[i].x - particles[j].x;
-          const dy = particles[i].y - particles[j].y;
-          const dist = Math.sqrt(dx*dx + dy*dy);
-          if(dist < 120){
+      for(let i=0;i<particles.length;i++){
+        for(let j=i+1;j<particles.length;j++){
+          const dx=particles[i].x-particles[j].x;
+          const dy=particles[i].y-particles[j].y;
+          const dist=Math.sqrt(dx*dx+dy*dy);
+          if(dist<120){
             ctx.beginPath();
-            ctx.moveTo(particles[i].x, particles[i].y);
-            ctx.lineTo(particles[j].x, particles[j].y);
+            ctx.moveTo(particles[i].x,particles[i].y);
+            ctx.lineTo(particles[j].x,particles[j].y);
             ctx.stroke();
           }
         }
