--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
-  <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
-  <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
-  <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
-  <meta property="og:url" content="http://www.mojtabazadeh.ir/">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{width:100%;height:100%;overflow-x:hidden}
@@ -90,14 +82,16 @@
       transform:translateY(-2px);
     }
 
-    .about-box, .contact-box {
+    .about-box {
       max-width:900px;
       background:rgba(255,255,255,0.08);
       padding:18px;
       border-radius:16px;
-      line-height:1.8;
-      font-size:clamp(0.9rem,3vw,1rem);
+      line-height:1.9;
+      font-size:clamp(0.9rem,3.5vw,1rem);
       text-align:justify;
+      word-wrap:break-word;
+      overflow-wrap:break-word;
       margin-bottom:18px;
       opacity:0;
       transform:translateY(30px);
@@ -106,7 +100,7 @@
       position:relative;
       overflow:hidden;
     }
-    .about-box:before, .contact-box:before {
+    .about-box:before {
       content:"";
       position:absolute;
       top:0;left:-50%;
@@ -120,45 +114,53 @@
       50%{left:120%}
       100%{left:120%}
     }
-    .visible {
-      opacity:1!important;
-      transform:translateY(0)!important;
-    }
+    .visible {opacity:1!important;transform:translateY(0)!important}
 
     .contact-box {
-      display:flex;flex-direction:column;align-items:center;
-      gap:8px;
-      text-align:left;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      gap:12px;
+      background:rgba(255,255,255,0.08);
+      padding:14px;
+      border-radius:16px;
+      box-shadow:0 0 12px rgba(180,100,255,0.3);
+      max-width:350px;
+      width:90%;
       animation:floatBox 6s ease-in-out infinite;
-      max-width:320px;
-    }
-    @keyframes floatBox {
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-4px)}
     }
     .contact-item {
       direction:ltr;
       display:flex;
+      justify-content:center;
       align-items:center;
       gap:6px;
-      font-size:1rem;
+      font-size:clamp(0.9rem,3.2vw,1rem);
       color:#f0e6ff;
       text-decoration:none;
       transition:all 0.3s ease;
+      background:rgba(255,255,255,0.05);
+      padding:6px 10px;
+      border-radius:10px;
+      width:100%;
     }
     .contact-item:hover {
       color:#ffffff;
       text-shadow:0 0 6px rgba(200,150,255,0.8);
       transform:translateY(-2px);
+      background:rgba(255,255,255,0.15);
+    }
+    @keyframes floatBox {
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-4px)}
     }
 
     .footer {
       font-size:0.85rem;
       margin-top:18px;
       opacity:0.7;
-      transition:opacity 0.3s;
     }
-    .footer a {color:white;text-decoration:none}
 
     .lang-switch {
       position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99;
@@ -173,26 +175,12 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
-    @keyframes smoothFadeSlide {
-      0%{opacity:1;transform:translateY(0)}
-      40%{opacity:0;transform:translateY(-15px)}
-      60%{opacity:0;transform:translateY(15px)}
-      100%{opacity:1;transform:translateY(0)}
-    }
-    @keyframes fadeInUp {to{opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
-      50%{text-shadow:0 0 14px rgba(200,150,255,1)}
-    }
-
     @media(max-width:480px){
-      .profile-container{width:120px;height:120px;}
+      .profile-container{width:120px;height:120px}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
-      .contact-box{max-width:95%;padding:10px;}
-      .contact-item{font-size:0.9rem;}
-      .about-box{text-align:right}
+      .contact-box{padding:12px;max-width:95%}
+      .about-box{padding:14px;font-size:0.95rem;line-height:1.85}
     }
   </style>
 </head>
@@ -213,145 +201,73 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
+    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text">
-    <!-- متن معرفی -->
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.
   </div>
 
-  <div class="contact-box" id="contact-box">
+  <div class="contact-box">
     <a class="contact-item" href="mailto:mojtabazadeh@outlook.com">📧 mojtabazadeh@outlook.com</a>
     <a class="contact-item" href="tel:+989334115773">📞 +98 933 411 5773</a>
   </div>
 
-  <div class="footer" id="footer">
-    سعید مجتبی‌زاده ©
-  </div>
+  <div class="footer">سعید مجتبی‌زاده ©</div>
 
-  <script>
-    const data={
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
-        footer:"سعید مجتبی‌زاده ©",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
-        ]
-      },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
-        footer:"Saeed Mojtabazadeh ©",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
-        ]
+<script>
+  const data={
+    fa:{
+      title:"دکتر سعید مجتبی‌زاده",
+      sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
+      links:[
+        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
+      ]
+    },
+    en:{
+      title:"Dr. Saeed Mojtabazadeh",
+      sub:"Postdoc Fellow in Geotechnical Engineering",
+      links:[
+        {text:"Website",href:"http://mojtabazadeh.ir/"},
+        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"}
+      ]
+    }
+  };
+  const mainTitle=document.getElementById("main-title"),
+        subTitle=document.getElementById("sub-title"),
+        linksContainer=document.getElementById("links");
+  function buildLinks(lang){
+    linksContainer.innerHTML="";
+    data[lang].links.forEach(l=>{
+      const a=document.createElement("a");
+      a.href=l.href;a.target="_blank";a.textContent=l.text;
+      linksContainer.appendChild(a);
+    });
+  }
+  function switchLang(lang){
+    localStorage.setItem("lang",lang);
+    setTimeout(()=>{
+      mainTitle.textContent=data[lang].title;
+      subTitle.textContent=data[lang].sub;
+      buildLinks(lang);
+      if(lang==="en"){
+        document.body.classList.add("lang-en");
+        document.documentElement.dir="ltr";
+      }else{
+        document.body.classList.remove("lang-en");
+        document.documentElement.dir="rtl";
       }
-    };
-
-    const mainTitle=document.getElementById("main-title"),
-          subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links"),
-          aboutText=document.getElementById("about-text"),
-          footer=document.getElementById("footer");
-
-    function buildLinks(lang){
-      linksContainer.innerHTML="";
-      data[lang].links.forEach(l=>{
-        const a=document.createElement("a");
-        a.href=l.href;a.target="_blank";a.textContent=l.text;
-        linksContainer.appendChild(a);
-      });
-    }
-    function switchLang(lang){
-      localStorage.setItem("lang",lang);
-      document.body.classList.add("smooth-switch");
-      setTimeout(()=>{
-        mainTitle.textContent=data[lang].title;
-        subTitle.textContent=data[lang].sub;
-        aboutText.textContent=data[lang].about;
-        footer.textContent=data[lang].footer;
-        buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.dir="ltr";
-        }else{
-          document.body.classList.remove("lang-en");
-          document.documentElement.dir="rtl";
-        }
-      },300);
-      setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
-    }
-    const savedLang=localStorage.getItem("lang")||"fa";
-    switchLang(savedLang);
-    document.getElementById("btn-fa").onclick=()=>switchLang("fa");
-    document.getElementById("btn-en").onclick=()=>switchLang("en");
-
-    const observer=new IntersectionObserver((entries)=>{
-      entries.forEach(e=>{
-        if(e.isIntersecting)e.target.classList.add("visible");
-      });
-    },{threshold:0.2});
-    observer.observe(document.getElementById("about-text"));
-    observer.observe(document.getElementById("contact-box"));
-
-    const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
-    let particles=[];
-    function createParticles(){
-      const count=Math.floor((window.innerWidth*window.innerHeight)/9000);
-      particles=Array.from({length:count},()=>({
-        x:Math.random()*window.innerWidth,
-        y:Math.random()*window.innerHeight,
-        r:Math.random()*1.8+1,
-        dx:(Math.random()-0.5)*0.4,
-        dy:(Math.random()-0.5)*0.4
-      }));
-    }
-    function resizeParticles(){
-      const ratio=window.devicePixelRatio||1;
-      canvas.width=window.innerWidth*ratio;
-      canvas.height=window.innerHeight*ratio;
-      ctx.setTransform(1,0,0,1,0,0);
-      ctx.scale(ratio,ratio);
-      createParticles();
-    }
-    resizeParticles();
-    window.addEventListener("resize",resizeParticles);
-
-    (function draw(){
-      ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(200,150,255,0.8)";
-      particles.forEach(p=>{
-        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
-        p.x+=p.dx;p.y+=p.dy;
-        if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
-        if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
-      });
-      ctx.strokeStyle="rgba(200,150,255,0.2)";
-      ctx.lineWidth=0.5;
-      for(let i=0;i<particles.length;i++){
-        for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x;
-          const dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x,particles[i].y);
-            ctx.lineTo(particles[j].x,particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(draw);
-    })();
-  </script>
+    },300);
+  }
+  const savedLang=localStorage.getItem("lang")||"fa";
+  switchLang(savedLang);
+  document.getElementById("btn-fa").onclick=()=>switchLang("fa");
+  document.getElementById("btn-en").onclick=()=>switchLang("en");
+</script>
 </body>
 </html>
