--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <a class="contact-item" href="tel:+989334115773"><span class="contact-icon">📞</span>+98 933 411 5773</a>
   </div>
 
-  <div class="footer">
-    © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
+  <div class="footer" id="footer">
+    سعید مجتبی‌زاده ©
   </div>
 
   <script defer>
@@ -227,6 +227,7 @@
         title:"دکتر سعید مجتبی‌زاده",
         sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
         about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران...`,
+        footer:"سعید مجتبی‌زاده ©",
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
