--- a/index.html
+++ b/index.html
@@ -96,6 +96,27 @@
       transform:translateY(-2px);
     }
 
+    .about-box, .contact-box {
+      position:relative;
+      overflow:hidden;
+    }
+    .about-box::before, .contact-box::before {
+      content:"";
+      position:absolute;
+      top:0;
+      left:-150%;
+      width:50%;
+      height:100%;
+      background:linear-gradient(120deg,rgba(255,255,255,0.1) 0%,rgba(255,255,255,0.3) 50%,rgba(255,255,255,0.1) 100%);
+      transform:skewX(-20deg);
+      animation:shineMove 5s infinite;
+    }
+    @keyframes shineMove {
+      0%{left:-150%;}
+      50%{left:150%;}
+      100%{left:150%;}
+    }
+
     .about-box {
       max-width:900px;
       background:rgba(255,255,255,0.08);
@@ -209,7 +230,7 @@
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است...
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران...
   </div>
 
   <div class="contact-box">
@@ -277,6 +298,7 @@
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
         aboutText.textContent=data[lang].about;
+        document.getElementById("footer").textContent=data[lang].footer; // ✅ فوتر اصلاح شد
         buildLinks(lang);
         if(lang==="en"){
           document.body.classList.add("lang-en");
