--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
         links:[
           {text:"Website",href:"http://mojtabazadeh.ir/"},
           {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
           {text:"Instagallery",href:"https://www.instagallery.ir/"},
           {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
           {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
           {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Website",href:"https://www.mojtabazade.ir/"}
+          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
         ]
       }
     };
